--- a/src/Ekom.NetPayment/packages.config
+++ b/src/Ekom.NetPayment/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
@@ -34,16 +35,16 @@
   <package id="MiniProfiler" version="2.1.0" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
-  <package id="NPoco" version="3.7.1" targetFramework="net452" />
+  <package id="NPoco" version="3.9.2" targetFramework="net452" />
   <package id="Our.Umbraco.Vorto" version="1.5.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
-  <package id="System.IO.Abstractions" version="2.0.0.144" targetFramework="net452" />
+  <package id="System.IO.Abstractions" version="2.1.0.175" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.6.0" targetFramework="net452" />
-  <package id="Unity.Abstractions" version="2.0.0" targetFramework="net452" />
-  <package id="Unity.Container" version="5.0.0" targetFramework="net452" />
+  <package id="Unity.Abstractions" version="2.3.1" targetFramework="net452" />
+  <package id="Unity.Container" version="5.3.2" targetFramework="net452" />
   <package id="Unity.ServiceLocation" version="2.0.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
