--- a/src/Ekom.NetPayment.Tests/packages.config
+++ b/src/Ekom.NetPayment.Tests/packages.config
@@ -37,6 +37,7 @@
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="NPoco" version="3.9.2" targetFramework="net452" />
   <package id="Our.Umbraco.Vorto" version="1.5.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
