--- a/src/Ekom.NetPayment/packages.config
+++ b/src/Ekom.NetPayment/packages.config
@@ -5,7 +5,8 @@
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="2.0.1" targetFramework="net452" />
   <package id="Examine" version="0.1.82" targetFramework="net452" />
-  <package id="GMO.Umbraco.PropertyHelper" version="1.1.0" targetFramework="net452" />
+  <package id="GMO.Umbraco.PropertyHelper" version="1.1.2" targetFramework="net452" />
+  <package id="GMO.Vorto" version="0.0.3" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net452" />
   <package id="ImageProcessor" version="2.5.3" targetFramework="net452" />
   <package id="ImageProcessor.Web" version="4.8.3" targetFramework="net452" />
@@ -16,6 +17,7 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
@@ -36,16 +38,12 @@
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="NPoco" version="3.9.2" targetFramework="net452" />
-  <package id="Our.Umbraco.Vorto" version="1.5.3" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="System.IO.Abstractions" version="2.1.0.175" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.6.0" targetFramework="net452" />
-  <package id="Unity.Abstractions" version="2.3.1" targetFramework="net452" />
-  <package id="Unity.Container" version="5.3.2" targetFramework="net452" />
-  <package id="Unity.ServiceLocation" version="2.0.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
