--- a/src/Ekom.NetPayment/Ekom.NetPayment.csproj
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.csproj
@@ -49,7 +49,7 @@
       <HintPath>..\packages\Examine.1.0.1\lib\net452\Examine.dll</HintPath>
     </Reference>
     <Reference Include="GMO.Vorto, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\GMO.Vorto.v8.0.1.0\lib\net472\GMO.Vorto.dll</HintPath>
+      <HintPath>..\packages\GMO.Vorto.v8.0.1.3\lib\net472\GMO.Vorto.dll</HintPath>
     </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.8.14.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.8.14\lib\Net45\HtmlAgilityPack.dll</HintPath>
@@ -258,10 +258,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\NetPayment.cs" />
+    <Compile Include="App_Start\EnsureNodesExist.cs" />
     <Compile Include="App_Start\EnsureTablesExist.cs" />
     <Compile Include="App_Start\Registrations.cs" />
     <Compile Include="Currency.cs" />
     <Compile Include="DatabaseFactory.cs" />
+    <Compile Include="Exceptions\EnsureNodesException.cs" />
     <Compile Include="Exceptions\ExamineSearcherNotFoundException.cs" />
     <Compile Include="Exceptions\PaymentProviderNotFoundException.cs" />
     <Compile Include="Exceptions\NetPaymentException.cs" />
