--- a/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Umbraco.NetPayment.v8</id>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
     <title>Umbraco.NetPayment.v8</title>
     <authors>Gunnar Már Óttarsson/Vettvangur</authors>
     <owners>Vettvangur</owners>
@@ -11,7 +11,7 @@
     <iconUrl>https://www.vettvangur.is/content/favicon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Allows configuration of payment providers within umbraco, does not depend on uWebshop.</description>
-    <releaseNotes>Fix umbraco Key property access.</releaseNotes>
+    <releaseNotes>Creates content types and data types on startup.</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags></tags>
     <dependencies>
