--- a/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Umbraco.NetPayment</id>
-    <version>7.6.2</version>
+    <version>7.6.3</version>
     <title>Umbraco.NetPayment</title>
     <authors>Gunnar Már Óttarsson/Vettvangur</authors>
     <owners>Vettvangur</owners>
@@ -11,7 +11,7 @@
     <iconUrl>https://www.vettvangur.is/content/favicon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Allows configuration of payment providers within umbraco, does not depend on uWebshop.</description>
-    <releaseNotes>Complete api for supporting base payment provider overload with multiple umbraco nodes.</releaseNotes>
+    <releaseNotes>Added function to decrypt reference.</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags></tags>
     <dependencies>
