--- a/src/Ekom.NetPayment/packages.config
+++ b/src/Ekom.NetPayment/packages.config
@@ -24,6 +24,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.8" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.10.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net452" />
