--- a/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
+++ b/src/Ekom.NetPayment/Ekom.NetPayment.nuspec
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0"?>
-<package >
+<package>
   <metadata>
-    <id>Ekom.NetPayment</id>
-    <version>0.0.1</version>
+    <id>Ekom.NetPayment.v7</id>
+    <version>1.0.0</version>
     <title>Ekom.NetPayment</title>
     <authors>Gunnar Már Óttarsson/Vettvangur</authors>
     <owners>Vettvangur</owners>
+    <license type="expression">MIT</license>
     <projectUrl>https://github.com/Vettvangur/Ekom.NetPayment</projectUrl>
+    <icon>images\VV_Logo.png</icon>
     <iconUrl>https://www.vettvangur.is/content/favicon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Allows configuration of payment providers within umbraco, can be used stand-alone as well.</description>
@@ -17,4 +19,7 @@
       <dependency id="Microsoft.VisualStudio.SlowCheetah" version="3.0.0" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="..\..\VV_Logo.png" target="images\" />
+  </files>
 </package>
